# persistent-th-rewrite

./: README.md  default.nix  persistent-th-rewrite.cabal
pp/: Main.hs
src/GHC/Plugin/: PersistentTHRewrite.hs
