cabal-version:
  >=1.10
name:
  persistent-th-rewrite
version:
  0.1.0.0
synopsis:
  Purify Persistent Template Haskell via AST rewriting
description:
  Rewrite persistent Template Haskell into pure functions and definitions.
bug-reports:
  https://github.com/dmjio/persistent-th-rewrite
license:
  BSD3
license-file:
  LICENSE
author:
  David Johnson
maintainer:
  djohnson.m@gmail.com
copyright:
  David Johnson (c) 2020
category:
  Language
build-type:
  Simple
extra-source-files:
  CHANGELOG.md

executable pp
  main-is:
    Main.hs
  hs-source-dirs:
    pp
  build-depends:
    base < 5, split
  default-language:
    Haskell2010
